Crud Species + guard + Interceptor

--- a/src/app/components/Competitions/competition/competition.component.html
+++ b/src/app/components/Competitions/competition/competition.component.html
@@ -1,4 +1,17 @@
-<p>competition works!</p>
-<div class="container mx-auto">
- 
+<!-- <div class="container mx-auto py-10">
+    <div class="card card-side bg-base-100 shadow-xl">
+        <figure>
+          <img
+            src="https://img.daisyui.com/images/stock/photo-1635805737707-575885ab0820.webp"
+            alt="Movie" />
+        </figure>
+        <div class="card-body">
+          <h2 class="card-title">New movie is released!</h2>
+          <p>Click the button to watch on Jetflix app.</p>
+          <div class="card-actions justify-end">
+            <button class="btn" onclick="my_modal_1.showModal()">Participate</button>
+          </div>
+        </div>
+    </div>
 </div>
+<app-create-competition/> -->
