--- a/src/app/components/nav-bar/nav-bar.component.html
+++ b/src/app/components/nav-bar/nav-bar.component.html
@@ -8,19 +8,11 @@
             <span class="text-2xl font-bold text-zinc-600">LOGO</span>
           </div>
           
-          <!-- Navigation Desktop -->
-          <div class="hidden md:flex items-center space-x-8 ml-10">
-            <!-- <a routerLink="/" routerLinkActive="active" class="text-gray-600 hover:text-blue-600" routerLinkActive="text-blue-600" >Home</a> -->
-            <!-- <a routerLink="/users" routerLinkActive="active" class="text-gray-600 hover:text-blue-600" routerLinkActive="text-blue-600">User</a>
-            <a routerLink="/competitions" routerLinkActive="active" class="text-gray-600 hover:text-blue-600" routerLinkActive="text-blue-600">Competition</a> -->
-          </div>
         </div>
 
         <!-- Boutons d'action -->
         <div class="hidden md:flex items-center space-x-4">
-          <!-- <a *ngIf="!isAuthenticated()" routerLink="/login" routerLinkActive="active"><button class="px-4 py-2 text-gray-600 hover:text-blue-600 bg-green-300 rounded-md">
-            Login
-          </button></a> -->
+
           <a *ngIf="!isAuthenticated()" routerLink="/login">
             <button
               class="relative flex items-center justify-center  px-5 py-2 text-18 font-semibold text-[#ececec] bg-[#2d7f2f] rounded-md border-none cursor-pointer select-none touch-none focus:outline-none transition-shadow duration-300 ease-[cubic-bezier(0.25,0.8,0.25,1)] shadow-none hover:shadow-[inset_0_-4px_0_0_rgb(0_0_0/35%),_inset_0_2px_0_0_rgb(230_230_230/7%)] active:shadow-[inset_0_2px_0_1px_rgb(0_0_0/29%),_inset_0_-1px_0_0_rgb(230_230_230/7%)]"
@@ -32,10 +24,8 @@
               </span>
             </button>
           </a>
+
           <a *ngIf="!isAuthenticated()" routerLink="/register" routerLinkActive="active">
-            <!-- <button class="px-4 py-2 bg-green-600 text-white rounded-md hover:bg-blue-700">
-            Register
-          </button> -->
             <button
             class="relative flex items-center justify-center  px-5 py-2 text-18 font-semibold text-[#ececec] bg-[#2d7f2f] rounded-md border-none cursor-pointer select-none touch-none focus:outline-none transition-shadow duration-300 ease-[cubic-bezier(0.25,0.8,0.25,1)] shadow-none hover:shadow-[inset_0_-4px_0_0_rgb(0_0_0/35%),_inset_0_2px_0_0_rgb(230_230_230/7%)] active:shadow-[inset_0_2px_0_1px_rgb(0_0_0/29%),_inset_0_-1px_0_0_rgb(230_230_230/7%)]"
           >
@@ -46,6 +36,7 @@
             </span>
             </button>
           </a>
+
           <div *ngIf="isAuthenticated()">
             <!-- <button (click)="logout()">Log Out</button> -->
             <button (click)="logout()"
@@ -68,6 +59,8 @@
             </button>
 
           </div>
+
+          
           
         </div>
 
@@ -88,18 +81,31 @@
     <!-- Menu Mobile Panel -->
     <div *ngIf="isMobileMenuOpen" class="md:hidden">
       <div class="px-2 pt-2 pb-3 space-y-1">
-        <a routerLink="/" class="block px-3 py-2 rounded-md text-gray-600 hover:text-blue-600 hover:bg-gray-50" routerLinkActive="text-blue-600 bg-blue-50" [routerLinkActiveOptions]="{exact: true}">Accueil</a>
-        <a routerLink="/services" class="block px-3 py-2 rounded-md text-gray-600 hover:text-blue-600 hover:bg-gray-50" routerLinkActive="text-blue-600 bg-blue-50">Services</a>
-        <a routerLink="/about" class="block px-3 py-2 rounded-md text-gray-600 hover:text-blue-600 hover:bg-gray-50" routerLinkActive="text-blue-600 bg-blue-50">À propos</a>
-        <a routerLink="/contact" class="block px-3 py-2 rounded-md text-gray-600 hover:text-blue-600 hover:bg-gray-50" routerLinkActive="text-blue-600 bg-blue-50">Contact</a>
+        <a *ngIf="!isAuthenticated()" routerLink="/login" routerLinkActive="active" class="block px-3 py-2 rounded-md text-gray-600 hover:text-blue-600 hover:bg-gray-50" routerLinkActive="text-blue-600 bg-blue-50" >Login</a>
+        <a *ngIf="!isAuthenticated()" routerLink="/register" routerLinkActive="active" class="block px-3 py-2 rounded-md text-gray-600 hover:text-blue-600 hover:bg-gray-50" routerLinkActive="text-blue-600 bg-blue-50">Register</a>
+        <div *ngIf="isAuthenticated()">
+          <!-- <button (click)="logout()">Log Out</button> -->
+          <button (click)="logout()"
+            class="group flex items-center justify-start w-11 h-11 bg-lime-800 rounded-full cursor-pointer relative overflow-hidden transition-all duration-200 shadow-lg hover:w-32 hover:rounded-lg active:translate-x-1 active:translate-y-1"
+          >
+            <div
+              class="flex items-center justify-center w-full transition-all duration-300 group-hover:justify-start group-hover:px-3"
+            >
+              <svg class="w-4 h-4" viewBox="0 0 512 512" fill="white">
+                <path
+                  d="M377.9 105.9L500.7 228.7c7.2 7.2 11.3 17.1 11.3 27.3s-4.1 20.1-11.3 27.3L377.9 406.1c-6.4 6.4-15 9.9-24 9.9c-18.7 0-33.9-15.2-33.9-33.9l0-62.1-128 0c-17.7 0-32-14.3-32-32l0-64c0-17.7 14.3-32 32-32l128 0 0-62.1c0-18.7 15.2-33.9 33.9-33.9c9 0 17.6 3.6 24 9.9zM160 96L96 96c-17.7 0-32 14.3-32 32l0 256c0 17.7 14.3 32 32 32l64 0c17.7 0 32 14.3 32 32s-14.3 32-32 32l-64 0c-53 0-96-43-96-96L0 128C0 75 43 32 96 32l64 0c17.7 0 32 14.3 32 32s-14.3 32-32 32z"
+                ></path>
+              </svg>
+            </div>
+            <div
+              class="absolute right-5 transform translate-x-full opacity-0 text-white text-lg font-semibold transition-all duration-300 group-hover:translate-x-0 group-hover:opacity-100"
+            >
+              Logout
+            </div>
+          </button>
+
+        </div>
       </div>
-      <div class="px-4 py-3 space-y-2">
-        <button class="w-full px-4 py-2 text-center text-gray-600 hover:text-blue-600">
-          Connexion
-        </button>
-        <button class="w-full px-4 py-2 text-center bg-blue-600 text-white rounded-lg hover:bg-blue-700">
-          Inscription
-        </button>
-      </div>
+      
     </div>
   </nav>
