--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,4 @@
-<app-nav-bar/>
-<router-outlet></router-outlet>
+<div class="bg-zinc-50 relative">
+    <app-nav-bar class="fixed top-0 left-0 w-full z-10 "/>
+    <router-outlet></router-outlet>
+</div>
