--- a/src/app/components/Admin/dashboard/dashboard.component.html
+++ b/src/app/components/Admin/dashboard/dashboard.component.html
@@ -1,5 +1,4 @@
-<body class="relative bg-yellow-50 overflow-hidden max-h-screen flex">
+<body class="relative bg-zinc-50 overflow-hidden max-h-screen flex">
     <app-side/>
-    
     <main><p>hehh</p></main>
 </body>
