--- a/src/app/components/Users/user/user.component.html
+++ b/src/app/components/Users/user/user.component.html
@@ -1,9 +1,8 @@
 <!-- <app-update-role/> -->
 
-<body class="relative bg-yellow-50 overflow-hidden max-h-screen flex">
+<body class="relative bg-zinc-50 overflow-hidden max-h-screen flex">
   <app-side/>
-
-  <div class="container mx-auto py-12 relative p-8">
+  <div class="container mx-auto py-12 relative py-24 ">
       <div class="shadow-md sm:rounded-lg">
           <table class="w-full text-sm text-left rtl:text-right text-gray-500 dark:text-gray-400">
             <thead class="text-xs text-gray-700 uppercase bg-gray-50 dark:bg-gray-700 dark:text-gray-400">
