--- a/src/app/components/nav-bar/nav-bar.component.html
+++ b/src/app/components/nav-bar/nav-bar.component.html
@@ -1,125 +1,20 @@
-<!-- <nav class="bg-white shadow-lg">
-    <div class="px-4">
-      <div class="flex justify-between h-16">
-        <div class="flex">
-          <div class="flex-shrink-0 flex items-center">
-            <svg xmlns="http://www.w3.org/2000/svg" width="2em" height="2em" viewBox="0 0 256 256"><rect width="256" height="256" fill="none"/><path fill="#175530" d="M21.333 0h213.334C246.449 0 256 9.551 256 21.333v213.334c0 11.782-9.551 21.333-21.333 21.333H21.333C9.551 256 0 246.449 0 234.667V21.333C0 9.551 9.551 0 21.333 0"/><path fill="#fff" d="M135.693 84.617C166.562 82.29 185.22 67.59 191.035 48c-40.737 18.77-91.57-4.192-101.19 37.282l-4.932 22.11c8.58-13.312 19.913-20.45 50.78-22.775m-16.05 3.764C104.47 90.567 92.3 97.605 85.47 109.966c-2.198 3.978-2.97 8.253-2.97 8.253l-3.491 15.65c4.373-7.8 12.194-17.766 32.69-22.508c.462-2.482 3.26-16.707 7.942-22.98m-43.819 59.767l-5.332 23.904c14.127-26.898 44.53-32.12 48.283-32.904c26.475-5.536 39.22-18.681 44.29-35.763c-23.1 13.062-77.02-3.34-87.241 44.763m-7.9 35.422L64 201.163c31.309-1.763 34.762-31.851 39.87-55.753c-9.74 3.4-31.207 16.724-35.946 38.16"/></svg>
-            <span class="text-2xl font-bold text-zinc-600">LOGO</span>
-          </div>
-          
-        </div>
-
-        <div class="hidden md:flex items-center space-x-4">
-
-          <a *ngIf="!isAuthenticated()" routerLink="/login">
-            <button
-              class="relative flex items-center justify-center  px-5 py-2 text-18 font-semibold text-[#ececec] bg-[#2d7f2f] rounded-md border-none cursor-pointer select-none touch-none focus:outline-none transition-shadow duration-300 ease-[cubic-bezier(0.25,0.8,0.25,1)] shadow-none hover:shadow-[inset_0_-4px_0_0_rgb(0_0_0/35%),_inset_0_2px_0_0_rgb(230_230_230/7%)] active:shadow-[inset_0_2px_0_1px_rgb(0_0_0/29%),_inset_0_-1px_0_0_rgb(230_230_230/7%)]"
-            >
-              <span
-                class="pointer-events-none transform translate-y-0 scale-100 transition-transform duration-300 ease-[cubic-bezier(0.25,0.8,0.25,1)] active:translate-y-[1px] active:scale-95"
-              >
-                Login
-              </span>
-            </button>
-          </a>
-
-          <a *ngIf="!isAuthenticated()" routerLink="/register" routerLinkActive="active">
-            <button
-            class="relative flex items-center justify-center  px-5 py-2 text-18 font-semibold text-[#ececec] bg-[#2d7f2f] rounded-md border-none cursor-pointer select-none touch-none focus:outline-none transition-shadow duration-300 ease-[cubic-bezier(0.25,0.8,0.25,1)] shadow-none hover:shadow-[inset_0_-4px_0_0_rgb(0_0_0/35%),_inset_0_2px_0_0_rgb(230_230_230/7%)] active:shadow-[inset_0_2px_0_1px_rgb(0_0_0/29%),_inset_0_-1px_0_0_rgb(230_230_230/7%)]"
-          >
-            <span
-              class="pointer-events-none transform translate-y-0 scale-100 transition-transform duration-300 ease-[cubic-bezier(0.25,0.8,0.25,1)] active:translate-y-[1px] active:scale-95"
-            >
-            Register
-            </span>
-            </button>
-          </a>
-
-          <div *ngIf="isAuthenticated()">
-            <button (click)="logout()"
-              class="group flex items-center justify-start w-11 h-11 bg-lime-800 rounded-full cursor-pointer relative overflow-hidden transition-all duration-200 shadow-lg hover:w-32 hover:rounded-lg active:translate-x-1 active:translate-y-1"
-            >
-              <div
-                class="flex items-center justify-center w-full transition-all duration-300 group-hover:justify-start group-hover:px-3"
-              >
-                <svg class="w-4 h-4" viewBox="0 0 512 512" fill="white">
-                  <path
-                    d="M377.9 105.9L500.7 228.7c7.2 7.2 11.3 17.1 11.3 27.3s-4.1 20.1-11.3 27.3L377.9 406.1c-6.4 6.4-15 9.9-24 9.9c-18.7 0-33.9-15.2-33.9-33.9l0-62.1-128 0c-17.7 0-32-14.3-32-32l0-64c0-17.7 14.3-32 32-32l128 0 0-62.1c0-18.7 15.2-33.9 33.9-33.9c9 0 17.6 3.6 24 9.9zM160 96L96 96c-17.7 0-32 14.3-32 32l0 256c0 17.7 14.3 32 32 32l64 0c17.7 0 32 14.3 32 32s-14.3 32-32 32l-64 0c-53 0-96-43-96-96L0 128C0 75 43 32 96 32l64 0c17.7 0 32 14.3 32 32s-14.3 32-32 32z"
-                  ></path>
-                </svg>
-              </div>
-              <div
-                class="absolute right-5 transform translate-x-full opacity-0 text-white text-lg font-semibold transition-all duration-300 group-hover:translate-x-0 group-hover:opacity-100"
-              >
-                Logout
-              </div>
-            </button>
-
-          </div>
-
-          
-          
-        </div>
-
-        <div class="md:hidden flex items-center">
-          <button (click)="toggleMobileMenu()" class="text-gray-600 hover:text-blue-600">
-            <svg *ngIf="!isMobileMenuOpen" xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-              <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16m-7 6h7" />
-            </svg>
-            <svg *ngIf="isMobileMenuOpen" xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-              <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12" />
-            </svg>
-          </button>
-        </div>
-      </div>
-    </div>
-
-    <div *ngIf="isMobileMenuOpen" class="md:hidden">
-      <div class="px-2 pt-2 pb-3 space-y-1">
-        <a *ngIf="!isAuthenticated()" routerLink="/login" routerLinkActive="active" class="block px-3 py-2 rounded-md text-gray-600 hover:text-blue-600 hover:bg-gray-50" routerLinkActive="text-blue-600 bg-blue-50" >Login</a>
-        <a *ngIf="!isAuthenticated()" routerLink="/register" routerLinkActive="active" class="block px-3 py-2 rounded-md text-gray-600 hover:text-blue-600 hover:bg-gray-50" routerLinkActive="text-blue-600 bg-blue-50">Register</a>
-        <div *ngIf="isAuthenticated()">
-          <button (click)="logout()"
-            class="group flex items-center justify-start w-11 h-11 bg-lime-800 rounded-full cursor-pointer relative overflow-hidden transition-all duration-200 shadow-lg hover:w-32 hover:rounded-lg active:translate-x-1 active:translate-y-1"
-          >
-            <div
-              class="flex items-center justify-center w-full transition-all duration-300 group-hover:justify-start group-hover:px-3"
-            >
-              <svg class="w-4 h-4" viewBox="0 0 512 512" fill="white">
-                <path
-                  d="M377.9 105.9L500.7 228.7c7.2 7.2 11.3 17.1 11.3 27.3s-4.1 20.1-11.3 27.3L377.9 406.1c-6.4 6.4-15 9.9-24 9.9c-18.7 0-33.9-15.2-33.9-33.9l0-62.1-128 0c-17.7 0-32-14.3-32-32l0-64c0-17.7 14.3-32 32-32l128 0 0-62.1c0-18.7 15.2-33.9 33.9-33.9c9 0 17.6 3.6 24 9.9zM160 96L96 96c-17.7 0-32 14.3-32 32l0 256c0 17.7 14.3 32 32 32l64 0c17.7 0 32 14.3 32 32s-14.3 32-32 32l-64 0c-53 0-96-43-96-96L0 128C0 75 43 32 96 32l64 0c17.7 0 32 14.3 32 32s-14.3 32-32 32z"
-                ></path>
-              </svg>
-            </div>
-            <div
-              class="absolute right-5 transform translate-x-full opacity-0 text-white text-lg font-semibold transition-all duration-300 group-hover:translate-x-0 group-hover:opacity-100"
-            >
-              Logout
-            </div>
-          </button>
-
-        </div>
-      </div>
-      
-    </div>
-  </nav> -->
 
   <nav class=" shadow-lg sticky top-0 z-50 backdrop-blur-sm ${scrolled ? 'bg-white/80 shadow-md' : 'bg-transparent'}">
     <div class="px-4">
       <div class="flex justify-between h-16">
         <div class="flex">
           <div class="flex-shrink-0 flex items-center">
-            <svg xmlns="http://www.w3.org/2000/svg" width="2em" height="2em" viewBox="0 0 256 256"><rect width="256" height="256" fill="none"/><path fill="#175530" d="M21.333 0h213.334C246.449 0 256 9.551 256 21.333v213.334c0 11.782-9.551 21.333-21.333 21.333H21.333C9.551 256 0 246.449 0 234.667V21.333C0 9.551 9.551 0 21.333 0"/><path fill="#fff" d="M135.693 84.617C166.562 82.29 185.22 67.59 191.035 48c-40.737 18.77-91.57-4.192-101.19 37.282l-4.932 22.11c8.58-13.312 19.913-20.45 50.78-22.775m-16.05 3.764C104.47 90.567 92.3 97.605 85.47 109.966c-2.198 3.978-2.97 8.253-2.97 8.253l-3.491 15.65c4.373-7.8 12.194-17.766 32.69-22.508c.462-2.482 3.26-16.707 7.942-22.98m-43.819 59.767l-5.332 23.904c14.127-26.898 44.53-32.12 48.283-32.904c26.475-5.536 39.22-18.681 44.29-35.763c-23.1 13.062-77.02-3.34-87.241 44.763m-7.9 35.422L64 201.163c31.309-1.763 34.762-31.851 39.87-55.753c-9.74 3.4-31.207 16.724-35.946 38.16"/></svg>
-            <span class="text-2xl font-bold text-zinc-600">HUNTERS</span>
+            <svg xmlns="http://www.w3.org/2000/svg" width="2em" height="2em" viewBox="0 0 512 512"><rect width="512" height="512" fill="none"/><path fill="#07461f" d="M430.8 28.36c-36.5-.71-144 71.74-134 89.74c10.6 19.2 44.3 36.9 55.1 33.2c85.4-29.4 94.7-116.16 86.5-121.11c-2-1.19-4.5-1.78-7.6-1.83m-349.64 0c-3.1 0-5.6.6-7.6 1.8c-8.2 4.9 1.1 91.74 86.34 121.14c10.8 3.7 44.5-14 55.1-33.2c10-18-97.4-90.54-133.84-89.74M36.85 193c-12 80.3 47.31 135.2 106.45 147.1c47.8 9.5 86-28.5 83.3-38.6c-6.8-25.7-134.94-100-189.75-108.5m438.25 0c-54.8 8.5-183.1 82.8-189.9 108.5c-2.7 10.1 35.5 48.1 83.3 38.6c59.3-11.9 118.6-66.8 106.6-147.1M93.16 378.8c-2.9.1-5.4.5-7.3 1.2c2.8 61.4 74.04 103.8 88.14 103.6c23.3-.3 46.1-22.4 46.5-38.5c.6-23-93.4-66.9-127.34-66.3m325.64 0c-34.1-.6-128.1 43.3-127.5 66.3c.4 16.1 23.2 38.2 46.5 38.5c14.1.2 85.5-42.2 88.3-103.6c-1.9-.7-4.4-1.1-7.3-1.2"/></svg>
+            <span class="text-2xl font-bold text-brown-900 ml-4">HUNTERS</span>
           </div>
         </div>
   
-        <div class="hidden md:flex items-center space-x-4">
-          <ng-container *ngIf="isLoggedIn$ | async">
-            <a *ngFor="let item of currentMenu" [routerLink]="item.routerLink" routerLinkActive="active" class="px-3 py-2 rounded-md text-gray-600 hover:text-blue-600 hover:bg-gray-50">
+        <div class="hidden md:flex items-center space-x-4 text-brown-300 font-bold text-base">
+          <ng-container *ngIf="isLoggedIn$ | async" >
+            <a *ngFor="let item of currentMenu" [routerLink]="item.routerLink" routerLinkActive="active" class="px-3 py-2 rounded-md hover:text-blue-600 hover:bg-gray-50">
               {{ item.label }}
             </a>
-            <a routerLink = "/home" routerLinkActive="active" class="px-3 py-2 rounded-md text-gray-600 hover:text-blue-600 hover:bg-gray-50">Home</a>
+            <a routerLink = "/home" routerLinkActive="active" class="px-3 py-2 rounded-md hover:text-blue-600 hover:bg-gray-50">Home</a>
           </ng-container>
   
           <ng-container *ngIf="!(isLoggedIn$ | async)">
@@ -193,7 +88,6 @@
         </div>
       </div>
     </div>
-    <!-- </div> -->
   </nav>
   
   
